homework/istio/httpserver0-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpserver0-istio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpserver0
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8090"
      labels:
        app: httpserver0

    spec:
      containers:
        - name: httpserver0
          image: caoweida2004/httpserver0:v1.3
          ports:
            - containerPort: 8090
          volumeMounts:
            - name: httpserver-config
              mountPath: "/config"
              readOnly: true
      volumes:
        - name: httpserver-config
          configMap:
            name: httpserver-config
            items:
              - key: "config.yaml"
                path: "config.yaml"
