homework/istio/service0.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpserver-service0
spec:
  ports:
  - port: 80
    targetPort: 8090
  selector:
    app: httpserver0
