homework/istio/service1.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpserver-service1
spec:
  ports:
  - port: 80
    targetPort: 8090
  selector:
    app: httpserver1
