homework/istio/service2.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpserver-service2
spec:
  ports:
  - port: 80
    targetPort: 8090
  selector:
    app: httpserver2
